--- a/src/pages/Signup/Signup.scss
+++ b/src/pages/Signup/Signup.scss
@@ -1,11 +1,16 @@
+@import "../../variables.scss";
+
 .signup-page{
-    border: 2px solid black;
+    border-radius: 25px;
     width: fit-content;
-    margin: 2em auto;
-    padding: 1em 3em;
+    margin: 3em auto;
+    padding: 3em 5em;
+    background-color: white;
+    font-family: $primary-font;
+    box-shadow: $shadow;
     h3 {
         margin-bottom: 2em;
-        letter-spacing: .1em;
+        letter-spacing: .2em;
         font-size: 2em;
     }
 
@@ -14,32 +19,41 @@
         flex-direction: column;
         max-width: 800px;
         margin: 2em auto;
-
         label {
             display: flex;
             flex-direction: column;
             text-align: left;
-            margin-bottom: 1em;
+            margin-bottom: 3em;
             position: relative;
+            span {
+                font-weight: 500;
+                margin-bottom: .2em;
+                letter-spacing: .05em;
+
+            }
             .error {
                 position: absolute;
                 color: red;
-                top: -1em;
+                top: 0em;
                 font-style: italic;
-                right: 0;
+                right: .5em;
+                opacity: .8;
             }
             input {
-                font-size: 1em;
-                padding: .25em;
                 width: 25em;
+                letter-spacing: .02em;
             }
         }
 
         button {
             margin-top: 5em;
-            font-size: 1em;
-            padding: .5em;
-            font-weight: 500;
+            font-size: 1.1em;
+            padding: .8em;
         }
+    }
+    .redirect {
+        color: $primary-color;
+        font-weight: 500;
+        letter-spacing: .02em;
     }
 }
