--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,1 @@
-.App {
-  text-align: center;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.App nav {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  background-color: #0072eb;
-  padding: 1em;
-  gap: 1em;
-}
-
-.App nav a {
-  text-decoration: none;
-  color: white;
-  font-weight: 600;
-  font-size: 1.1em;
-  letter-spacing: .02em;
-}
-/*# sourceMappingURL=App.css.map */
+/* No CSS *//*# sourceMappingURL=App.css.map */
