--- a/src/pages/ProfileSetup/ProfileSetup.css
+++ b/src/pages/ProfileSetup/ProfileSetup.css
@@ -1,24 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;800&family=Quicksand:wght@300;500;600&display=swap");
-.login-page {
+.profile-setup-page {
   border-radius: 25px;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   margin: 3em auto;
-  padding: 3em 3em;
+  padding: 3em 5em;
   background-color: white;
   font-family: "Montserrat", sans-serif;
   -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
           box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.login-page h3 {
-  margin-bottom: 2em;
-  letter-spacing: .2em;
+.profile-setup-page h1 {
+  margin-bottom: 1em;
+  letter-spacing: .1em;
   font-size: 2em;
 }
 
-.login-page form {
+.profile-setup-page h3 {
+  margin-bottom: 3em;
+  letter-spacing: .05em;
+  font-size: 1.2em;
+}
+
+.profile-setup-page form {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -30,7 +36,7 @@
   margin: 2em auto;
 }
 
-.login-page form label {
+.profile-setup-page form label {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -43,13 +49,13 @@
   position: relative;
 }
 
-.login-page form label span {
+.profile-setup-page form label span {
   font-weight: 500;
   margin-bottom: .2em;
   letter-spacing: .05em;
 }
 
-.login-page form label .error {
+.profile-setup-page form label .error {
   position: absolute;
   color: red;
   top: 0em;
@@ -58,20 +64,20 @@
   opacity: .8;
 }
 
-.login-page form label input {
+.profile-setup-page form label input {
   width: 25em;
   letter-spacing: .02em;
 }
 
-.login-page form button {
+.profile-setup-page form button {
   margin-top: 5em;
   font-size: 1.1em;
   padding: .8em;
 }
 
-.login-page .redirect {
+.profile-setup-page .redirect {
   color: #14a190;
   font-weight: 500;
   letter-spacing: .02em;
 }
-/*# sourceMappingURL=Login.css.map */
+/*# sourceMappingURL=ProfileSetup.css.map */
