--- a/src/pages/ProfileSetup/ProfileSetup.scss
+++ b/src/pages/ProfileSetup/ProfileSetup.scss
@@ -1,17 +1,22 @@
 @import "../../variables.scss";
 
-.login-page{
+.profile-setup-page{
     border-radius: 25px;
     width: fit-content;
     margin: 3em auto;
-    padding: 3em 3em;
+    padding: 3em 5em;
     background-color: white;
     font-family: $primary-font;
     box-shadow: $shadow;
-    h3 {
-        margin-bottom: 2em;
-        letter-spacing: .2em;
+    h1 {
+        margin-bottom: 1em;
+        letter-spacing: .1em;
         font-size: 2em;
+    }
+    h3 {
+        margin-bottom: 3em;
+        letter-spacing: .05em;
+        font-size: 1.2em;
     }
 
     form {
