--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -2,25 +2,28 @@
 
 .navbar {
   background-color: $primary-color;
-  
+  padding: 0 1em;
   ul {
     display: flex;
     flex-direction: row;
     align-items: center;
     gap: 1em;
     margin: 0 auto;
-    max-width: 2100px;
+    max-width: 1700px;
     li{
       font-weight: 600;
       color: white;
-      font-size: 1.2em;
+      font-size: 1.1em;
       letter-spacing: .02em;
       user-select: none;
+
+      // &.logout-item{
+      //   margin-left: auto;
+      // }
       a, button {
         text-decoration: none;
         all: unset;
-        padding: 1em;
-        // border-radius: 30%;
+        padding: .9em;
         display: flex;
         cursor: pointer;
         transition: background 200ms ease;
@@ -35,8 +38,9 @@
         &.active {
           background-color: $secondary-color;
         }
+
         svg {
-          font-size: 1.75em;
+          font-size: 1.5em;
         }
         .info {
           
@@ -44,14 +48,20 @@
           visibility: hidden;
           bottom: 0;
           left: 50%;
-          transform: translate(-50%, 120%);
-          transition: visibility 10ms ease 500ms;
+          transform: translate(-50%, 130%);
+          transition: visibility 10ms ease 250ms;
           background-color: rgba(255, 255, 255, 0.5);
+          box-shadow: $shadow;
           color: black;
+          font-size: .9em;
           font-weight: 300;
           text-align: center;
-          padding: .2em;
+          padding: .3em .5em;
           border-radius: 5px;
+
+          &:hover{
+            display: none;
+          }
         }
       }
 
@@ -68,11 +78,11 @@
           padding: .25em .5em;
           margin: .25em;
           border-radius: 25px;
-          border: 3px solid $secondary-color;
+          border: 2px solid $secondary-color;
         }
         img {
-          height: 45px;
-          width: 45px;
+          height: 35px;
+          width: 35px;
           border-radius: 50%;
         }
       }
