--- a/src/pages/CreatePost/CreatePost.scss
+++ b/src/pages/CreatePost/CreatePost.scss
@@ -1,52 +1,148 @@
+@import "../../variables.scss";
+
 .create-post{
-    display: flex;
-    justify-content: center;
+    border-radius: 25px;
+    width: fit-content;
+    margin: 2em auto;
+    padding: 3em 5em;
+    background-color: white;
+    font-family: $primary-font;
+    box-shadow: $shadow;
+
+    h3 {
+        margin-bottom: 2em;
+        letter-spacing: .2em;
+        font-size: 2em;
+    }
     form {
-        margin-top: 3em;
         display: flex;
         flex-direction: column;
-        width: fit-content;
-        border: 3px solid rgb(0, 114, 235);
-        border-radius: 5px;
-        padding: 2em;
-        text-align: left;
+        max-width: 800px;
+        margin: 2em auto;
+
 
         label {
             display: flex;
             flex-direction: column;
-            margin: .5em 0;
+            text-align: left;
+            margin-bottom: 2em;
             position: relative;
-            .error {
-                color: red;
-                font-style: italic;
-                position: absolute;
-                top: -1em;
-                right: .5em;
-                font-size: .9em;
-            }
             span {
-                font-size: 1.1em;
+                font-weight: 500;
                 margin-bottom: .2em;
+                letter-spacing: .05em;
             }
-            input {
-                height: 1.5em;
+            .error {
+                position: absolute;
+                color: $secondary-color;
+                top: 0em;
+                font-style: italic;
+                right: .5em;
+                opacity: .8;
+            }
+            input, textarea {
                 width: 25em;
-                padding: .2em;
-                font-size: 1.1em;
+                letter-spacing: .02em;
+            }
+            textarea {
+                height: 6em;
             }
         }
+        .privacy {
+            display: flex;
+            flex-direction: row;
+            height: fit-content;
+            justify-content: center;
+            align-items: center;
+            margin: 0;
+            gap: 1em;
+            margin-top: .5em;
+            margin-bottom: 2em;
+            li{
+                button{
+                    margin: 0;
+                    background-color: $gray-color;
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    padding: .25em .75em;
+                    border: 2px solid transparent;
+                    border-radius: 10px;
+                    color: $secondary-color;
+                    opacity: .75;
+                    user-select: none;
+                    transition: 150ms opacity ease, 150ms border ease,;
+                    font-size: .9em;
+                    svg{
+                        font-size: 1em;
+                        margin-right: .25em;
+                    }
+                    &.active {
+                        background-color: $secondary-color;
+                        border: 2px solid $primary-color;
+                        color: white;
+                        opacity: 1;
+                    }
+                    &:hover{
+                        opacity: 1;
+                        border: 2px solid $primary-color;
+                    }
+                }
 
-        button {
+                &:last-child{
+                    margin-left: auto;
+                    div{
+                        display: flex;
+                        flex-direction: row;
+                        align-items: center;
+                        background-color: white;
+                        color: $primary-color;
+                        cursor: pointer;
+                        p{
+                            font-size: .85em;
+                        }
+                        svg{
+                            font-size: 2.5em;
+                            margin-right: 0;
+                        }
+                        &:hover{
+                            color: $secondary-color;
+                        }
+                    }
+                }
+            }
+        }
+        .submit-btn, .cancel-btn {
             outline: none;
             border: none;
             margin-top: 3em;
             text-align: center;
-            background-color: rgb(0, 114, 235);
+            background-color: $secondary-color;
             color: white;
             padding: .75em 0;
             border-radius: 5px;
             opacity: .9;
             font-size: 1em;
+            transition: 150ms opacity ease, 150ms border ease,;
+            border: 2px solid transparent;
+            &:disabled{
+                opacity: .5;
+                &:hover{
+                    opacity: .5;
+                    border: 2px solid transparent;
+                }
+            }
+            &.cancel-btn {
+                margin-top: 2em;
+                background-color: $gray-color;
+                color: $secondary-color;
+                font-weight: 600;
+                letter-spacing: .05em;
+            }
+            &:hover{
+                opacity: 1;
+                border: 2px solid $primary-color;
+            }
         }
     }
 }
