--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -3,32 +3,36 @@
 .navbar {
   background-color: $primary-color;
   padding: 0 1em;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  // height: 3.6em;
+  z-index: 10;
   ul {
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 1em;
+    gap: .25em;
     margin: 0 auto;
     max-width: 1700px;
+    height: 100%;
     li{
       font-weight: 600;
       color: white;
       font-size: 1.1em;
       letter-spacing: .02em;
       user-select: none;
-
-      // &.logout-item{
-      //   margin-left: auto;
-      // }
       a, button {
         text-decoration: none;
         all: unset;
-        padding: .9em;
+        padding: .8em;
         display: flex;
         cursor: pointer;
         transition: background 200ms ease;
         position: relative;
-
+        height: 100%;
+        margin: .15em 0;
         &:not(.active):hover{
           background-color: rgba(255, 255, 255, 0.25);
         }
@@ -37,6 +41,8 @@
         }
         &.active {
           background-color: $secondary-color;
+          // border-radius: 50%;
+
         }
 
         svg {
@@ -50,7 +56,7 @@
           left: 50%;
           transform: translate(-50%, 130%);
           transition: visibility 10ms ease 250ms;
-          background-color: rgba(255, 255, 255, 0.5);
+          background-color: rgb(255, 255, 255);
           box-shadow: $shadow;
           color: black;
           font-size: .9em;
