--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,43 +1,14 @@
+@import "../../variables.scss";
+
 .home {
-    ul {
-        display: flex;
-        flex-direction: column;
-        list-style: none;
-        align-items: center;
-        justify-content: center;
-        gap: 3em;
-        li {
-          border: 1px solid lightblue;
-          width: 300px;
-          border-radius: 20px;
-          overflow: hidden;
-          cursor: pointer;
-          user-select: none;
-          h4 {
-            background-color: rgb(0, 114, 235);
-            margin: 0;
-            padding: .75em;
-            color: white;
-            letter-spacing: .05em;
-            font-weight: 400;
-          }
-    
-          p {
-            &.body {
-              margin: 4em 0;
-            }
-          }
-          .footer {
-            display: flex;
-            flex-direction: row;
-            justify-content: end;
-            background-color: rgb(0, 114, 235);
-            padding: 0 .5em;
-            color: white;
-            gap: 1em;
-            font-size: .9em;
-          }
-        }
-      }
-    
+  padding: 2em 0;
+  max-width: 50em;
+  margin: 0 auto;
+  position: relative;
+  .filter {
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    margin: .5em 0 1em 0;
+  }
 }
