--- a/src/pages/CreatePost/CreatePost.scss
+++ b/src/pages/CreatePost/CreatePost.scss
@@ -57,6 +57,8 @@
             margin: 0;
             gap: 1em;
             margin-bottom: 2em;
+            position: relative;
+
             li{
                 button{
                     margin: 0;
@@ -115,8 +117,18 @@
                     }
                     div{
                         pointer-events: none;
-                    }
+                    }  
                 }
+            }
+            .privacy-info{
+                position: absolute;
+                top: 3.4em;
+                left: .5em;
+                width: 100%;
+                font-size: .85em;
+                font-weight: 300;
+                color: $secondary-color;
+                font-style: italic;
             }
         }
         .submit-btn, .cancel-btn {
