--- a/src/pages/Home/PostsList.scss
+++ b/src/pages/Home/PostsList.scss
@@ -1,6 +1,7 @@
 @import "../../variables.scss";
 
 .posts-list {
+    flex: 1;
     display: flex;
     flex-direction: column;
     list-style: none;
@@ -8,6 +9,7 @@
     justify-content: center;
     gap: 2em;
     // overflow-y: scroll;
+    padding-top: 1em;
     li {
       box-shadow: $shadow;
       width: 40em;
@@ -18,13 +20,53 @@
       background-color: white;
       text-align: center;
       z-index: 1;
+      position: relative;
 
+      &.create-post-item {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: .5em 0;
+        gap: .15em;
+        font-weight: 600;
+        letter-spacing: .05em;
+        color: $secondary-color;
+        border: 2px solid $secondary-color;
+        span {
+          font-size: 1.25em; 
+        }
+        svg{
+          font-size: 1.8em; 
+        }
+        &:hover{
+          filter: brightness(110%);
+          border: 2px solid $primary-color;
+        }
+      }
       &:hover > .body > p {
         visibility: visible;
         // bottom: 0;
       }
       &:hover > .body > h4 {
         opacity: .3;
+      }
+      &:active{
+        transform: scale(.99);
+      }
+      .privacy {
+        position: absolute;
+        top: 1em;
+        left: 1em;
+        background-color: $secondary-color;
+        color: white;
+        border-radius: 5px;
+        p{
+          font-size: .55em;
+          padding: .3em .5em;
+          letter-spacing: .05em;
+          font-weight: 400;
+        }
       }
       .body{
         position: relative;
@@ -62,7 +104,7 @@
           line-height: 1.5em;
           color: white;
           &.private-post {
-            font-weight: 600;
+            font-weight: 500;
             font-style: italic;
           }
         }
@@ -86,6 +128,23 @@
             flex-direction: row;
             align-items: center;
             gap: .5em;
+            
+            button{
+              svg{
+                font-size: 2em;
+              }
+              &:hover{
+                color: $secondary-color;
+                filter: brightness(160%);
+              }
+              &:active{
+                transform: scale(.9);
+              }
+              &.disabled-like-btn {
+                opacity: .5;
+                pointer-events: none;
+              }
+            }
         }
         span{
           font-weight: 300;
