--- a/src/pages/Post/PostPreview.scss
+++ b/src/pages/Post/PostPreview.scss
@@ -2,7 +2,7 @@
 
 .post-preview {
     width: 65%;
-
+    height: 100%;
     .container {
         border: 2px solid $primary-color;
         border-radius: 20px;
