--- a/src/pages/Messages/ChatBoxBody.scss
+++ b/src/pages/Messages/ChatBoxBody.scss
@@ -1,13 +1,20 @@
 .chat-box-body {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: row;
     height: 100%;
     width: 100%;
-    ul {
+    .chat-messages-container{
         display: flex;
-        flex-direction: column-reverse;
-        height: inherit;
-        overflow-y: auto;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 100%;
+        flex: 1;
+        ul {
+            display: flex;
+            flex-direction: column-reverse;
+            height: inherit;
+            overflow-y: auto;
+        }
     }
+
 }
