--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@ button:disabled {
   opacity: .75;
 }
 
-input {
+input, textarea {
   all: unset;
   border: 1px solid #14a190;
   border-radius: 5px;
@@ -74,8 +74,14 @@ input {
           box-sizing: border-box;
 }
 
-input:focus {
+input:focus, textarea:focus {
   border: 2px solid #14a190;
+}
+
+textarea {
+  display: inline-block;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
