--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,47 +1,8 @@
-.home ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  list-style: none;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  gap: 3em;
-}
-
-.home ul li {
-  border: 1px solid lightblue;
-  width: 300px;
-  border-radius: 20px;
-  overflow: hidden;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
-.home ul li h4 {
-  background-color: #0072eb;
-  margin: 0;
-  padding: .75em;
-  color: white;
-  letter-spacing: .05em;
-  font-weight: 400;
-}
-
-.home ul li p.body {
-  margin: 4em 0;
-}
-
-.home ul li .footer {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;800&family=Quicksand:wght@300;500;600&display=swap");
+.home {
+  width: 100%;
+  margin: 0 auto;
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -49,13 +10,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: end;
-  background-color: #0072eb;
-  padding: 0 .5em;
-  color: white;
-  gap: 1em;
-  font-size: .9em;
+  height: 100%;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 /*# sourceMappingURL=Home.css.map */
