--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -72,6 +72,9 @@
       }
 
 
+      &:nth-child(3){
+        margin-left: .5em;
+      }
       &:nth-child(4){
         margin-left: auto;
       }
