--- a/src/components/Navbar/SearchInput.scss
+++ b/src/components/Navbar/SearchInput.scss
@@ -13,9 +13,11 @@
             font-family: $secondary-font;
             font-size: .9em;
             padding: .25em 2em .25em 1em;
-            min-width: 150px;
+            min-width: 250px;
             letter-spacing: .025em;
             color: white;
+            border-radius: 15px;
+            background-color: rgba(155, 155, 155, 0.1);
             &::placeholder{
                 color: white;
                 opacity: .7;
