--- a/src/pages/CreatePost/CreatePost.scss
+++ b/src/pages/CreatePost/CreatePost.scss
@@ -3,45 +3,54 @@
 .create-post{
     border-radius: 25px;
     width: fit-content;
-    margin: 2em auto;
-    padding: 3em 5em;
+    margin: 1em auto;
+    padding: 2em 5em;
     background-color: white;
     font-family: $primary-font;
     box-shadow: $shadow;
-
+    max-width: 1100px;
     h3 {
-        margin-bottom: 2em;
-        letter-spacing: .2em;
+        letter-spacing: .05em;
         font-size: 2em;
+        color: $secondary-color;
+        margin-bottom: .5em;
+        svg {
+            font-size: .9em;
+        }
+    }
+    .description {
+        margin-bottom: 3em;
+        font-size: .85em;
+        opacity: .8;
+        letter-spacing: .02em;
+
     }
     form {
         display: flex;
         flex-direction: column;
         max-width: 800px;
         margin: 2em auto;
-
-
+        span {
+            font-weight: 500;
+            margin-bottom: .2em;
+            letter-spacing: .05em;
+        }
         label {
             display: flex;
             flex-direction: column;
             text-align: left;
             margin-bottom: 2em;
             position: relative;
-            span {
-                font-weight: 500;
-                margin-bottom: .2em;
-                letter-spacing: .05em;
-            }
             .error {
                 position: absolute;
-                color: $secondary-color;
+                color: orangered;
                 top: 0em;
                 font-style: italic;
                 right: .5em;
                 opacity: .8;
             }
             input, textarea {
-                width: 38em;
+                width: 100%;
                 letter-spacing: .02em;
             }
             textarea {
@@ -98,9 +107,14 @@
                         display: flex;
                         flex-direction: row;
                         align-items: center;
-                        background-color: white;
+                        background-color: rgba(0, 0, 0, 0.1);
                         color: $primary-color;
+                        padding: .25em 1em;
+                        border-radius: 10px;
+                        border: 2px solid transparent;
                         cursor: pointer;
+                        transition: 150ms opacity ease, 150ms border ease,;
+
                         p{
                             font-size: .85em;
                         }
@@ -110,9 +124,12 @@
                         }
                         &:hover{
                             color: $secondary-color;
+                            border: 2px solid $primary-color;
+
                         }
                         input {
                             display: none;
+
                         }
                     }
                     div{
