--- a/src/pages/Home/PostsList.scss
+++ b/src/pages/Home/PostsList.scss
@@ -24,7 +24,7 @@
 
       &.create-post-item {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
         padding: .5em 0;
@@ -33,15 +33,20 @@
         letter-spacing: .05em;
         color: $secondary-color;
         border: 2px solid $secondary-color;
+        min-height: 60px;
+        opacity: .75;
+        margin-bottom: 1.2em;
+        // font-family: $secondary-font;
         span {
-          font-size: 1.25em; 
+          font-size: 1.35em; 
+          margin-right: .5em;
         }
         svg{
           font-size: 1.8em; 
         }
         &:hover{
-          filter: brightness(110%);
           border: 2px solid $primary-color;
+          opacity: 1;
         }
       }
       &:hover > .body > p {
