--- a/src/pages/Home/UserNavigation.scss
+++ b/src/pages/Home/UserNavigation.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding-top: 1em;
-    border-right: 2px solid $secondary-color;
+    border-right: 1px solid rgba(0, 0, 0, 0.25);
     user-select: none;
     position: fixed;
     .backdrop{
@@ -17,7 +17,6 @@
         top: 0;
         left: 0;
         z-index: 15;
-        // background-color: rgba(255, 0, 0, 0.147);
     }
     .user-info{
         all: unset;
